# hydration-bot

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile
hydration-bot/: .env.example  .gitmodules  Cargo.toml
hydration-bot/src/: main.rs
src/: main.rs
src/commands/: owner.rs
